## WIP

### Updates

* Add a do not backup option to program preferences.  Not recommended, but
  provided for those who know they always have backups of all their images and
  see no need to create any more.

## GeoTag 4.14

### Update

* Exiftool version 12.39

### Bug Fix

* Date/Times could only be modified.  A Date/Time could not be assigned
  to an image that did not have a create date.  Fixed.

## GeoTag 4.13

### Bug Fix

* The map search bar got buried under the map and somehow I didn't notice
  before releasing 4.12.

* Resizing window did bad things

## GeoTag 4.12

### New Features

* Add the ability to adjust the Time Zone used by the code that matches image
  timestamps to track log timestamps when assinging locations from a track
  log.  Edit -> Adjust Time Zone is the new menu item to initiate selection
  of a Time Zone. It is only necessary to adjust time zones when the Camera
  date/time does not match the date/time of the computer running GeoTag.

* Change display color of changed but not yet saved fields to green. This
  helps identify work in progress when changing the location or timestamp
  of several images.

* ExifTool 12.30

### Bug Fix

* Remove broken help page.  Instead link to the help information on
  www.snafu.org.

## GeoTag 4.11

### New Feature

* ExifTool version 12.21

### Bug Fix

* Pull date/time and existing location information from the image file
  even when an XMP file exists.  The same metadata from an XMP file, if
  present, will have priority and override the metadata from the image file.

## GeoTag 4.10

### New Feature

* Add preference item to preserve the original image file
  modification time when updating GeoLocation data.

* Add "Discard tracks" under the File menu. All tracks are cleared from the map.

* Allow paste into change timestamp and update location windows.

* Paste into images when not using the Update Location window now has a new